# AutoTabSetup

./: .gitattributes  .gitignore  .gitmodules  AUTHORS.md  AppEventSink.cpp  AppEventSink.h  Auto Tab Setup.def  Auto Tab Setup.rc  Auto Tab Setup.sln  Auto Tab Setup.vcxproj  Auto Tab Setup.vcxproj.filters  CMakeLists.txt  Common.h  DocEventSink.cpp  DocEventSink.h  FindIndent.cpp  FindIndent.h  Properties.h  README.md  plugin.cpp  stdafx.cpp  stdafx.h
Tests/: Tests.cpp  Tests.vcxproj  Tests.vcxproj.filters  stdafx.h
